samples/_failures_safe/1761556359_5e96b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c35b40d2.c: In function ‘main’:
./samples/SAFE/__tmp_c35b40d2.c:138:9: error: expected expression at end of input
  138 |         input[len -
      |         ^~~~~
./samples/SAFE/__tmp_c35b40d2.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c35b40d2.c:138:9: error: expected declaration or statement at end of input
